[gd_scene load_steps=2 format=3 uid="uid://bih7s78mvakbs"]

[ext_resource type="Script" uid="uid://hrygb1xr6s6x" path="res://scenes/Interactions/planet_interaction.gd" id="1_mwa8j"]

[node name="PlanetInteraction" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 41.0
offset_bottom = 42.0
script = ExtResource("1_mwa8j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -88.0
offset_right = 16.91
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 0

[node name="HailButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Hail"

[node name="ScanButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Scan"

[node name="MineButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mine
"
